# MercatorioQoL

./: main.py  pyproject.toml  settings.json
mercatorioqol/: balance.py  bot.py  bot_settings.json  bot_utils.py  main.py  test.py  utils.py
